search.html changed

--- a/search.html
+++ b/search.html
@@ -218,7 +218,7 @@
                     let cell7 = document.createElement("td");
                     let serialNumber = document.createTextNode(guitar.serialNumber);
                     let builder = document.createTextNode(guitar.builder);
-                    let model = document.createTextNode(guitar.builder);
+                    let model = document.createTextNode(guitar.model);
                     let type = document.createTextNode(guitar.type);
                     let backWood = document.createTextNode(guitar.backWood);
                     let topWood = document.createTextNode(guitar.topWood);
