Frontend + Backend implementation

--- a/about.html
+++ b/about.html
@@ -51,10 +51,12 @@
         <a href="index.html" class="logo">Guitar Inventory Management</a>
     
         <nav class="navbar">
-            <a href="about.html">About</a>
+            <a href="">About</a>
+            <!-- <h1>About</h1> -->
             <a href="add.html">Add</a>
             <a href="search.html">Search</a>
         </nav>
+
     </header>
 
 </body> 
