--- a/add.html
+++ b/add.html
@@ -151,7 +151,10 @@
     
 
     <script>
-        function addTheGuitar() {
+        let host = "http://localhost:8080";
+
+        async function addTheGuitar() {
+           let message = ""; 
            let serialNumberNode = document.getElementById("serialNumber");
            let serialNumber = serialNumberNode.value;
            let priceNode = document.getElementById("price");
@@ -169,6 +172,41 @@
            let guitar = {serialNumber: serialNumber, price: price, builder: builder, model: model, type: type, backWood: backWood, topWood: topWood};
 
            alert("You entered: " + JSON.stringify(guitar));
+           if(serialNumber == ''){
+            alert('Serial number is empty!');
+           }
+           if(price == ''){
+            alert('Price is empty!');
+           }
+           if(builder == ''){
+            alert('Builder is empty!');
+           }
+           if(model == ''){
+            alert('Model is empty!');
+           }
+           if(type == ''){
+            alert('Type is empty!');
+           }
+           if(backWood == ''){
+            alert('Backwood is empty!');
+           }
+           if(topWood == ''){
+            alert('TopWood is empty!');
+           }
+           let request = {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify(guitar)
+           };
+           let response = await fetch(host + "/add", request);
+           if(response.status == 200){          
+            message = "The guitar was added to the system.";
+          }else {
+            message = "Something went wrong. Please try again or contact the customer support team.";
+          }
+          alert(message);
 
         }
     </script>
