Changed to use render for backend

--- a/search.html
+++ b/search.html
@@ -191,7 +191,7 @@
         let guitars = [];
 
         async function getAll(){
-            let host = "http://localhost:8080";
+            let host = "https://guitar-inventory-management-backend.onrender.com";
 
             let request = {
                 method: "GET",
