--- a/add.html
+++ b/add.html
@@ -151,7 +151,7 @@
     
 
     <script>
-        let host = "http://localhost:8080";
+        let host = "https://guitar-inventory-management-backend.onrender.com";
 
         async function addTheGuitar() {
            let message = ""; 
@@ -169,7 +169,7 @@
            let backWood = backWoodNode.value;
            let topWoodNode = document.getElementById("topWood");
            let topWood = topWoodNode.value;
-           let guitar = {serialNumber: serialNumber, price: price, builder: builder, model: model, type: type, backWood: backWood, topWood: topWood};
+           let guitar = {serialNumber: serialNumber, price: price, builder: builder.toUpperCase(), model: model, type: type.toUpperCase(), backWood: backWood.toUpperCase(), topWood: topWood.toUpperCase()};
 
            alert("You entered: " + JSON.stringify(guitar));
            if(serialNumber == ''){
