--- a/about.html
+++ b/about.html
@@ -55,9 +55,11 @@
             <!-- <h1>About</h1> -->
             <a href="add.html">Add</a>
             <a href="search.html">Search</a>
+            <a href="login.html">Login</a>
         </nav>
 
     </header>
 
+    <script src="configuration.js"></script>
 </body> 
 </html>
