--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
         <a href="about.html">About</a>
         <a href="add.html">Add</a>
         <a href="search.html">Search</a>
+        <a href="login.html">Login</a>
     </nav>
 </header>
 <div class="img">
     <img src="vanhalen.png" width=527px height=351px alt="">
 </div>
+<script src="configuration.js"></script>
 </body> 
 </html>
